 - [DEV-262] added group filtering  for "Trigger info" (Artem)
 - [DEV-259] added internal links (Artem)
 - [DEV-251] added improved screen editing (Artem)
 - [DEV-249] added support of advanced regular expressions (Artem,Sasha)
 - [DEV-247] added enhancement to the Graph function (Artem)
 - [DEV-233,DEV-237] added support of scheduled maintenance periods (Artem,Sasha)

Changes for 1.6.3

 - [ZBX-673] fixed problem with adding the graphs on an autodiscovered hosts (Sasha)
 - [ZBX-794] fixed SQL error on login screen when postgre is used, small GUI typos fix (Vedmak) 
 - [ZBX-702] events duration now counts weeks instead of months, small GUI typos fix (Vedmak) 
 - [ZBX-537] Distributed monitoring: PosrgeSQL related fixes (Sasha) 
 - [ZBX-792] fixed server memory leak in processing remote commands in actions (Dmitry)
 - [ZBX-537] Distributed monitoring: added update of Last chack and Last value fields (Sasha)
 - [ZBX-537] Distributed monitoring: fixed deadlocks (Sasha)
 - [ZBX-760] historical data is now available for "not supported" items (Vedmak)
 - [ZBX-789] fixed error when try to remove trigger comment (Vedmak)
 - [ZBX-782] added host name of deppending trigger (amach)
 - [ZBX-786] fixed undefined argument on graph delete (Artem)
 - [ZBX-776] changed disabled auto-logout indication (amach)
 - [ZBX-784] added extension to hosts when importing graph to template (Artem)
 - [ZBX-774] display correct error message if file import fails (Vedmak)
 - [ZBX-777] default autologout time is set to 900 (Vedmak)
 - [DEV-268] added support of vfs.dev.read/write under FreeBSD (Sasha)
 - [ZBX-448] fixed zabbix server status when frontend and backend are on different servers (Vedmak)
 - [ZBX-660] fixed screen clock set to server time showed local time (Artem)
 - [ZBX-603] fixed min autologout value to 90 seconds (amach)
 - [ZBX-762] improved performance of processing of log and text items (Sasha)
 - [ZBX-749] details box is open by default if any error occured (Vedmak)