@@ -31,6 +31,7 @@ Changes for 1.7.0
 
 Changes for 1.6.3
 
+ - [ZBX-799] fixed hosts massupdate with "new group" and "use profile" (Vedmak)
  - [ZBX-673] fixed problem with adding the graphs on an autodiscovered hosts (Sasha)
  - [ZBX-794] fixed SQL error on login screen when postgre is used, small GUI typos fix (Vedmak) 
  - [ZBX-702] events duration now counts weeks instead of months, small GUI typos fix (Vedmak) 
